--- a/datetime-time.html
+++ b/datetime-time.html
@@ -14,7 +14,7 @@ Element providing solution to no problem in particular.
 @status alpha
 @homepage http://tylergarlick.github.io/datetime-picker
 -->
-<polymer-element name="datetime-time" attributes="date visible selectedTime minuteIncrement" minuteIncrement="1">
+<polymer-element name="datetime-time" attributes="date visible selectedDate minuteIncrement" minuteIncrement="1">
   <template>
     <link rel="stylesheet" href="datetime-picker.css">
 
@@ -25,49 +25,51 @@ Element providing solution to no problem in particular.
       <div class="time-view" layout horizontal>
         <div layout vertical center class="time-selector">
           <paper-icon-button icon="expand-less" on-tap="{{ subtractHour }}"></paper-icon-button>
-          <div><input type="text" value="{{ selectedTime | formatTimeHour }}" id="timeHour"/></div>
+          <div><input type="text" value="{{ selectedDate | formatTimeHour }}" id="timeHour"/></div>
           <paper-icon-button icon="expand-more" on-tap="{{ addHour }}"></paper-icon-button>
         </div>
         <div layout vertical center class="time-selector">
           <paper-icon-button icon="expand-less" on-tap="{{ subtractMinute }}"></paper-icon-button>
-          <div><input type="text" value="{{ selectedTime | formatTimeMinute }}" id="timeMinute"/></div>
+          <div><input type="text" value="{{ selectedDate | formatTimeMinute }}" id="timeMinute"/></div>
           <paper-icon-button icon="expand-more" on-tap="{{ addMinute }}"></paper-icon-button>
         </div>
         <div layout vertical center class="time-selector">
-          <paper-icon-button icon="expand-less" on-tap="{{ toggleAmAndPm }}"></paper-icon-button>
-          <div class="am-and-pm">{{ selectedTime | formatTimeAMPM }}</div>
-          <paper-icon-button icon="expand-more" on-tap="{{ toggleAmAndPm }}"></paper-icon-button>
+          <paper-icon-button icon="expand-less" on-tap="{{ add12Hours }}"></paper-icon-button>
+          <div class="am-and-pm">{{ selectedDate | formatTimeAMPM }}</div>
+          <paper-icon-button icon="expand-more" on-tap="{{ subtract12Hours }}"></paper-icon-button>
         </div>
       </div>
     </div>
   </template>
   <script>
     Polymer({
-      
-      selectedTime: moment(),
-
       addHour: function () {
-        this.selectedTime = moment(this.selectedTime).add(1, 'hour');
+        this.selectedDate = moment(this.selectedDate).add(1, 'hour');
         this.fireTimeChangedEvent();
       },
 
       subtractHour: function () {
-        this.selectedTime = moment(this.selectedTime).add(-1, 'hour');
+        this.selectedDate = moment(this.selectedDate).add(-1, 'hour');
         this.fireTimeChangedEvent();
       },
 
       addMinute: function () {
-        this.selectedTime = moment(this.selectedTime).add(this.minuteIncrement, 'minute');
+        this.selectedDate = moment(this.selectedTime).add(this.minuteIncrement, 'minute');
         this.fireTimeChangedEvent();
       },
 
       subtractMinute: function () {
-        this.selectedTime = moment(this.selectedTime).add(this.minuteIncrement * -1, 'minute');
+        this.selectedDate = moment(this.selectedDate).add(this.minuteIncrement * -1, 'minute');
         this.fireTimeChangedEvent();
       },
 
-      toggleAmAndPm: function () {
-        this.selectedTime = moment(this.selectedTime).add(12, 'hours');
+      add12Hours: function () {
+        this.selectedDate = moment(this.selectedDate).add(12, 'hours');
+        this.fireTimeChangedEvent();
+      },
+
+      subtract12Hours: function () {
+        this.selectedDate = moment(this.selectedDate).add(-12, 'hours');
         this.fireTimeChangedEvent();
       },
 
@@ -90,7 +92,7 @@ Element providing solution to no problem in particular.
       },
 
       fireTimeChangedEvent: function () {
-        this.fire('datetime-picker-time-changed', this.selectedTime);
+        this.fire('datetime-picker-time-changed', this.selectedDate);
       }
     });
   </script>
