--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,6 @@
     <link rel="import" href="datetime-picker.html">
   </head>
   <body unresolved>
-  <datetime-picker></datetime-picker>
+  <datetime-picker name="start_date" label="Start Date"></datetime-picker>
   </body>
 </html>
